@@ -7,6 +7,7 @@ Changes:
 * Allow disabling udev support at make install with udev=0.
 * Allow changing the target kernel with --with-linux-release
   instead of only enforcing its release name within Open-MX.
+* Some fixes in the omx_check.sh testing script.
 
 Caveats:
 * No background progression or retransmission is done if the application
